# VISION

./: CMakeLists.txt
scripts/: ventanas.py
src/: Pelota_c.cpp  hist.cpp  linea.cpp  ocv.cpp  test.cpp  test_vis.cpp
